--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,27 @@ python:
   - 3.4
   - 3.5
   - 3.6
+  - 3.7
+services:
+  - docker
 install:
-  - pip install -r requirements/dev.txt
+  - pip install -r requirements.txt
   - nvm install 6.10
   - nvm use 6.10
   - npm install
+  - docker build -t nkod-tsa .
+  - docker run -p 8000:80 --name nkod-tsa nkod-tsa
+script:
+  - docker ps | grep -q nkod-tsa
+  - flask test
 before_script:
   - npm run lint
   - npm run build
   - flask lint
-script: flask test
+deploy:
+  provider: script
+  script:
+   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+   - docker push USER/REPO
+  on:
+    branch: master
