--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,7 @@ install:
   - nvm install 6.10
   - nvm use 6.10
   - npm install
-  - docker build -t nkod-tsa .
-  - docker run -p 8000:80 --name nkod-tsa nkod-tsa
 script:
-  - docker ps | grep -q nkod-tsa
   - flask test
 before_script:
   - npm run lint
@@ -29,6 +26,9 @@ deploy:
   provider: script
   script:
    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+   - docker build -f Dockerfile -t $REPO:$COMMIT .
+   - docker tag $REPO:$COMMIT $REPO:$TAG
+   - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
    - docker push USER/REPO
   on:
     branch: master
