--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 ## The following requirements were added by pip freeze:
 alembic==1.0.1
+amqp==2.3.2
 atomicwrites==1.2.1
 attrs==18.2.0
 bcrypt==3.1.4
 beautifulsoup4==4.6.3
+billiard==3.5.0.4
 blinker==1.4
+celery==4.2.1
 certifi==2018.10.15
 cffi==1.11.5
 Click==7.0
@@ -32,6 +35,7 @@ gunicorn==19.9.0
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+kombu==4.2.1
 Mako==1.0.7
 MarkupSafe==1.0
 mccabe==0.6.1
@@ -46,13 +50,17 @@ pyflakes==1.6.0
 pytest==3.6.2
 python-dateutil==2.7.3
 python-editor==1.0.3
+pytz==2018.5
 raven==6.9.0
+redis==2.10.6
+rfc3987==1.3.8
 six==1.11.0
 snowballstemmer==1.2.1
 SQLAlchemy==1.2.8
 testfixtures==6.3.0
 text-unidecode==1.2
 urllib3==1.24
+vine==1.1.4
 waitress==1.1.0
 WebOb==1.8.3
 WebTest==2.0.29
