--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 ## The following requirements were added by pip freeze:
 alembic==1.0.1
 amqp==2.3.2
+atenvironment==0.2.0
 atomicwrites==1.2.1
 attrs==18.2.0
 bcrypt==3.1.4
@@ -10,6 +11,7 @@ blinker==1.4
 celery==4.2.1
 certifi==2018.10.15
 cffi==1.11.5
+chardet==3.0.4
 Click==7.0
 factory-boy==2.11.1
 Faker==0.9.2
@@ -32,6 +34,9 @@ Flask-WTF==0.14.2
 gevent==1.3.7
 greenlet==0.4.15
 gunicorn==19.9.0
+hiredis==0.2.0
+idna==2.7
+isodate==0.6.0
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
@@ -47,12 +52,17 @@ pycodestyle==2.3.1
 pycparser==2.19
 pydocstyle==3.0.0
 pyflakes==1.6.0
+pyparsing==2.2.2
 pytest==3.6.2
 python-dateutil==2.7.3
 python-editor==1.0.3
 pytz==2018.5
 raven==6.9.0
+rdflib==4.2.2
+rdflib-jsonld==0.4.0
+rdflib-sqlalchemy==0.3.8
 redis==2.10.6
+requests==2.20.0
 rfc3987==1.3.8
 six==1.11.0
 snowballstemmer==1.2.1
