Dummy env in Travis CI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: false  # http://docs.travis-ci.com/user/migrating-from-legacy/
 language: python
 env:
 - FLASK_APP=autoapp.py FLASK_DEBUG=1
+- REDIS=foo
 python:
   - 3.6
 #  - 3.7
