--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,21 +20,21 @@ services:
     user: nobody
     links:
       - redis
-      - virtuoso
-      - etl
+      #- virtuoso
+      #- etl
     command: celery worker -l info -A tsa.tasks
-  virtuoso:
-    image: tenforce/virtuoso:1.3.1-virtuoso7.2.2
-    environment:
-      - SPARQL_UPDATE="true"
-      - DEFAULT_GRAPH="http://www.example.com/my-graph"
-      - DBA_PASSWORD="myDbaPassword"
-    ports:
-      - "8890:8890"
-      - "1111:1111"
-    volumes:
-      - ./data/virtuoso:/data
-  etl:
-    image: linkedpipes/etl
-    ports:
-      - "8080:8080"
+  #virtuoso:
+  #  image: tenforce/virtuoso:1.3.1-virtuoso7.2.2
+  #  environment:
+  #    - SPARQL_UPDATE="true"
+  #    - DEFAULT_GRAPH="http://www.example.com/my-graph"
+  #    - DBA_PASSWORD="myDbaPassword"
+  #  ports:
+  #    - "8890:8890"
+  #    - "1111:1111"
+  #  volumes:
+  #    - ./data/virtuoso:/data
+  #etl:
+  #  image: linkedpipes/etl
+  #  ports:
+  #    - "8080:8080"
