--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ flake8-quotes==1.0.0
 Flask==1.0.2
 Flask-Bcrypt==0.7.1
 Flask-Caching==1.4.0
+Flask-Cors==3.0.7
 Flask-DebugToolbar==0.10.1
 Flask-Login==0.4.1
 Flask-Migrate==2.2.0
