--- a/package.json
+++ b/package.json
@@ -51,6 +51,6 @@
     "url-loader": "0.5.9",
     "url-parse": "1.4.3",
     "webpack": "2.7.0",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
