--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,80 @@
 ## The following requirements were added by pip freeze:
-alembic==1.0.1
-amqp==2.3.2
+alembic==1.0.8
+amqp==2.4.2
 atenvironment==0.2.0
-atomicwrites==1.2.1
-attrs==18.2.0
-bcrypt==3.1.4
-beautifulsoup4==4.6.3
-billiard==3.5.0.4
+atomicwrites==1.3.0
+attrs==19.1.0
+bcrypt==3.1.6
+beautifulsoup4==4.7.1
+billiard==3.5.0.5
 blinker==1.4
-celery==4.2.1
-certifi==2018.10.15
-cffi==1.11.5
+celery==4.2.2
+certifi==2019.3.9
+cffi==1.12.2
 chardet==3.0.4
 Click==7.0
+entrypoints==0.3
 factory-boy==2.11.1
-Faker==0.9.3
-flake8==3.5.0
+Faker==1.0.4
+flake8==3.7.7
 flake8-blind-except==0.1.1
 flake8-debugger==3.1.0
 flake8-docstrings==1.3.0
-flake8-isort==2.5
+flake8-isort==2.7.0
 flake8-polyfill==1.0.2
 flake8-quotes==1.0.0
 Flask==1.0.2
 Flask-Bcrypt==0.7.1
-Flask-Caching==1.4.0
+Flask-Caching==1.7.0
 Flask-Cors==3.0.7
 Flask-DebugToolbar==0.10.1
 Flask-Login==0.4.1
-Flask-Migrate==2.2.0
+Flask-Migrate==2.4.0
 Flask-SQLAlchemy==2.3.2
 Flask-Webpack==0.1.0
-gevent==1.3.7
+gevent==1.4.0
 greenlet==0.4.15
 gunicorn==19.9.0
-hiredis==0.2.0
-idna==2.7
+hiredis==1.0.0
+idna==2.8
 isodate==0.6.0
-isort==4.3.4
-itsdangerous==0.24
+isort==4.3.16
+itsdangerous==1.1.0
 Jinja2==2.10
-kombu==4.2.1
-Mako==1.0.7
-MarkupSafe==1.0
+kombu==4.3.0
+Mako==1.0.8
+MarkupSafe==1.1.1
 mccabe==0.6.1
-more-itertools==4.3.0
-pep8-naming==0.7.0
-pluggy==0.6.0
-py==1.7.0
-pycodestyle==2.3.1
+more-itertools==7.0.0
+pep8-naming==0.8.2
+pluggy==0.9.0
+py==1.8.0
+pycodestyle==2.5.0
 pycparser==2.19
 pydocstyle==3.0.0
-pyflakes==1.6.0
-pyparsing==2.2.2
-pytest==3.6.2
-python-dateutil==2.7.3
-python-editor==1.0.3
-pytz==2018.5
-raven==6.9.0
+pyflakes==2.1.1
+pyparsing==2.3.1
+pytest==4.3.1
+python-dateutil==2.8.0
+python-editor==1.0.4
+pytz==2018.9
+raven==6.10.0
 rdflib==4.2.2
 rdflib-jsonld==0.4.0
 rdflib-sqlalchemy==0.3.8
-redis==2.10.6
-requests==2.20.0
+redis==3.2.1
+requests==2.21.0
 rfc3987==1.3.8
-six==1.11.0
+six==1.12.0
 snowballstemmer==1.2.1
-SQLAlchemy==1.2.8
-testfixtures==6.3.0
+soupsieve==1.9
+SQLAlchemy==1.3.1
+testfixtures==6.6.2
 text-unidecode==1.2
-urllib3==1.24
-vine==1.1.4
-waitress==1.1.0
-WebOb==1.8.3
-WebTest==2.0.29
-Werkzeug==0.14.1
+urllib3==1.24.1
+vine==1.3.0
+waitress==1.2.1
+WebOb==1.8.5
+WebTest==2.0.33
+Werkzeug==0.15.1
 WTForms==2.2.1
