--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "description": "Time series analysis for NKOD.",
   "scripts": {
     "build": "NODE_ENV=production webpack --progress --colors -p",
-    "start-dev": "concurrently -n \"WEBPACK,FLASK\" \"npm run webpack-dev-server\" \"npm run flask-server\"",
+    "start-dev": "npm run flask-server",
     "start": "npm run build; npm run flask-prod",
-    "webpack-dev-server": "NODE_ENV=debug webpack-dev-server --port 2992 --hot --inline",
     "flask-server": "FLASK_APP=$PWD/autoapp.py FLASK_DEBUG=1 flask run",
-    "flask-prod": "gunicorn -k gevent -w 4 -b 0.0.0.0:8000 autoapp:app",
-    "lint": "eslint \"assets/js/*.js\""
+    "flask-prod": "gunicorn -k gevent -w 4 -b 0.0.0.0:8000 autoapp:app"
   },
   "repository": {
     "type": "git",
@@ -25,32 +23,6 @@
     "url": "https://github.com/eghuro/crawlcheckio/issues"
   },
   "homepage": "https://github.com/eghuro/crawlcheckio#readme",
-  "dependencies": {
-    "jquery": "3.3.1",
-    "sync-exec": "0.6.2"
-  },
-  "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.5",
-    "babel-preset-env": "1.7.0",
-    "concurrently": "4.1.0",
-    "cryptiles": "4.1.3",
-    "css-loader": "2.1.1",
-    "eslint": "5.16.0",
-    "eslint-config-airbnb-base": "13.1.0",
-    "eslint-plugin-import": "2.16.0",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "3.0.1",
-    "hoek": "6.1.3",
-    "less": "3.9.0",
-    "less-loader": "4.1.0",
-    "manifest-revision-webpack-plugin": "0.4.1",
-    "raw-loader": "2.0.0",
-    "style-loader": "0.23.1",
-    "url-loader": "1.1.2",
-    "url-parse": "1.4.4",
-    "webpack": "4.29.6",
-    "webpack-dev-server": ">=3.2.1"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
