--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3.3'
 services:
   web:
     build: .
@@ -6,7 +6,7 @@ services:
       - REDIS=redis://redis:6379/0
     ports:
       - "80:8000"
-    links:
+    depends_on:
       - celery
   redis:
     image: "redis:alpine"
@@ -20,7 +20,7 @@ services:
       - DBA_PASSWORD=myDbaPassword
       - REDIS=redis://redis:6379/0
     user: nobody
-    links:
+    depends_on:
       - redis
       #- virtuoso
       #- etl
