--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ amqp==2.4.2
 atenvironment==0.2.1
 atomicwrites==1.3.0
 attrs==19.1.0
+Babel==2.6.0
 beautifulsoup4==4.7.1
 billiard==3.6.0.0
 blinker==1.4
@@ -25,6 +26,7 @@ Flask==1.0.2
 Flask-Caching==1.7.0
 Flask-Cors==3.0.7
 Flask-DebugToolbar==0.10.1
+flower==0.9.3
 gevent==1.4.0
 greenlet==0.4.15
 gunicorn==19.9.0
@@ -60,9 +62,11 @@ rfc3987==1.3.8
 six==1.12.0
 snowballstemmer==1.2.1
 soupsieve==1.9
+SPARQLWrapper==1.8.2
 SQLAlchemy==1.3.2
 testfixtures==6.6.2
 text-unidecode==1.2
+tornado==5.1.1
 urllib3==1.24.1
 vine==1.3.0
 waitress==1.2.1
