--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ services:
   - docker
 install:
   - pip install -r requirements.txt
-script:
-  - flask test
+#script:
+#  - flask test
 #before_script:
 #  - flask lint
 deploy:
