--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,14 @@
 [flake8]
 ignore = D401
 max-line-length=120
+
+[bumpversion]
+current_version = 0.2
+commit = True
+tag = True
+parse = (?P<major>\d+)\.(?P<minor>\d+)
+serialize = {major}.{minor}
+
+[bumpversion:file:tsa/__init__.py]
+search = __version__ = '{current_version}'
+replace = __version__ = '{new_version}'
