--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+## The following requirements were added by pip freeze:
 amqp==2.4.2
 atenvironment==0.2.1
 atomicwrites==1.3.0
@@ -31,9 +32,11 @@ isort==4.3.17
 itsdangerous==1.1.0
 Jinja2==2.10.1
 kombu==4.5.0
+libarchive-c==2.8
 MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==7.0.0
+nose==1.3.7
 pluggy==0.9.0
 py==1.8.0
 pycodestyle==2.5.0
