--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ gevent==1.4.0
 greenlet==0.4.15
 gunicorn==19.9.0
 hiredis==1.0.0
+html5lib==1.0.1
 idna==2.8
 isodate==0.6.0
 isort==4.3.17
@@ -62,6 +63,7 @@ testfixtures==6.7.0
 urllib3==1.24.1
 vine==1.3.0
 waitress==1.2.1
+webencodings==0.5.1
 WebOb==1.8.5
 WebTest==2.0.33
 Werkzeug==0.15.2
