--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,15 @@
   ],
   "separateMajorMinor": true,
   "rebaseStalePrs": true,
+  "minor": {
+    "automerge": true
+  },
+  "patch": {
+    "automerge": true
+  },
+  "pin": {
+    "automerge": true
+  },
   "docker": {
     "enabled": true
   }
