--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,28 +21,8 @@ services:
         args:
             PYTHON_VERSION: ${PYTHON_VERSION}
     environment:
-      - ETL=http://etl:8080
-      - VIRTUOSO=http://virtuoso:8890
-      - DBA_PASSWORD=myDbaPassword
       - REDIS=redis://redis:6379/0
     user: nobody
     depends_on:
       - redis
-      #- virtuoso
-      #- etl
-    command: celery worker -l info -A tsa.celery
-  #virtuoso:
-  #  image: tenforce/virtuoso:1.3.1-virtuoso7.2.2
-  #  environment:
-  #    - SPARQL_UPDATE="true"
-  #    - DEFAULT_GRAPH="http://www.example.com/my-graph"
-  #    - DBA_PASSWORD="myDbaPassword"
-  #  ports:
-  #    - "8890:8890"
-  #    - "1111:1111"
-  #  volumes:
-  #    - ./data/virtuoso:/data
-  #etl:
-  #  image: linkedpipes/etl
-  #  ports:
-  #    - "8080:8080"
+    command: celery worker -l info -A tsa.celery --pool gevent --concurrency=500
