pip check in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
   - sudo apt-get install libarchive-dev
   - pip install -r requirements.txt
 script:
+  - pip check
   - flask test
   - PYTHON_VERSION=`python --version|head -n1|cut -d' ' -f2|cut -d '+' -f1` docker-compose build
 #before_script:
