--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,12 @@ attrs==19.3.0
 beautifulsoup4==4.8.2
 billiard==3.6.3.0
 blinker==1.4
+bumpversion==0.5.3
 cachetools==4.0.0
 celery==4.4.2
 certifi==2019.11.28
 chardet==3.0.4
-Click==7.1.1
+click==7.1.1
 entrypoints==0.3
 flake8==3.7.9
 flake8-blind-except==0.1.1
@@ -22,11 +23,15 @@ flake8-quotes==3.0.0
 Flask==1.1.2
 Flask-Caching==1.8.0
 Flask-Cors==3.0.8
+flower==0.9.4
 gevent==1.4.0
 greenlet==0.4.15
 gunicorn==20.0.4
+hiredis==1.0.1
 html5lib==1.0.1
+humanize==0.5.1
 idna==2.9
+importlib-metadata==1.6.0
 isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -37,7 +42,9 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.2.0
 nose==1.3.7
+packaging==20.3
 pluggy==0.13.1
+public==2019.4.13
 py==1.8.1
 pycodestyle==2.5.0
 pydocstyle==5.0.2
@@ -53,16 +60,20 @@ redis==3.4.1
 reppy==0.4.14
 requests==2.23.0
 requests-toolbelt==0.9.1
+requirements-validator==2019.4.13
 rfc3987==1.3.8
 six==1.14.0
 snowballstemmer==2.0.0
 soupsieve==2.0
 SPARQLWrapper==1.8.5
 testfixtures==6.14.0
+tornado==6.0.4
 urllib3==1.25.8
 vine==1.3.0
 waitress==1.4.3
+wcwidth==0.1.9
 webencodings==0.5.1
 WebOb==1.8.6
 WebTest==2.0.34
 Werkzeug==0.16.1
+zipp==3.1.0
