--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ importlib-metadata==1.6.0
 isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.11.1
+Jinja2==2.11.2
 kombu==4.6.8
 libarchive-c==2.9
 MarkupSafe==1.1.1
@@ -53,7 +53,6 @@ pyparsing==2.4.7
 pytest==5.4.1
 python-dateutil==2.8.1
 pytz==2019.3
-raven==6.10.0
 rdflib==4.2.2
 rdflib-jsonld==0.5.0
 redis==3.4.1
@@ -62,6 +61,7 @@ requests==2.23.0
 requests-toolbelt==0.9.1
 requirements-validator==2019.4.13
 rfc3987==1.3.8
+sentry-sdk==0.14.3
 six==1.14.0
 snowballstemmer==2.0.0
 soupsieve==2.0
