--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ pytz==2019.3
 rdflib==4.2.2
 rdflib-jsonld==0.5.0
 redis==3.4.1
+redisrwlock==0.1.2
 reppy==0.4.14
 requests==2.23.0
 requests-toolbelt==0.9.1
