--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false  # http://docs.travis-ci.com/user/migrating-from-legacy/
 dist: xenial
 language: python
 env:
-- FLASK_APP=autoapp.py FLASK_DEBUG=1 REDIS=redis://foo
+- FLASK_APP=autoapp.py FLASK_DEBUG=1 REDIS=redis://foo DSN=
 python:
   - 3.6
   - 3.7
